# FlexCNN

./: .gitignore  LICENSE  README.md  clean.sh  env.sh  env_old.sh  generate_design.sh  index.md  requirements.txt  requirements_summary.txt
HLS_Codes/: cnn_sw.cpp  design_prepare.sh  hls_script.tcl  kernel.cpp  pose.h  tb_pose.cpp  util.h
HLS_Codes/systolic_array_kernel/: cnn_features.json  code_template.py  codegen.py  desp_gen.py
SDx_project/: hw_kernel_modify.py  sdx_kernel_create.sh
SDx_project/System/: makefile
SDx_project/src/: cnn_sw.cpp  host.cpp  hw_kernel.cpp  params.h  pose.h  xcl2.hpp
auto_compile/: run.sh
auto_compile/auto_compile_old/dse/: dse_p.py  vu9p.json
auto_compile/auto_compile_old/inst_gen/: inst_parse.py  tile.json
auto_compile/data/arch_connectivity/: ENet.json  UNet.json  VGG16.json
auto_compile/data/boards/: u200.json  u250.json  u280.json  u50.json
auto_compile/data/pre_dse_architectures/: ENet_arch.json  UNet_arch.json  VGG16_arch.json
auto_compile/data_generation/: compare_results.py  conv.py  generate_biases.py  generate_data copy 2.py  generate_data copy.py  generate_data.py  generate_weights.py  run.sh
auto_compile/design_generation/: generate.py  set_headers_mem_0.py  set_headers_mem_1.py  set_headers_mem_2.py  set_headers_mem_3.py  set_headers_mem_4.py
auto_compile/design_generation/HLS/: FlexCNN.cpp  design_prepare.sh  hw_kernel.cpp
auto_compile/design_generation/HLS copy/: FlexCNN.cpp
auto_compile/design_generation/HLS copy/SA/: 2DDataFeedCollect_U1.cpp  2DDataFeed_U1.cpp  2DPE_U1.cpp  common_header_U1.h
auto_compile/design_generation/HLS copy/systolic_array_kernel/: cnn_features.json  code_template.py  desp_gen.py  h_to_json.py
auto_compile/design_generation/HLS/SA/: 2DDataCollect_U1.cpp  2DDataFeed_U1.cpp  2DPE_U1.cpp  top.cpp
auto_compile/design_generation/HLS/modules/: SA.cpp  act_and_bn_ENet.cpp  act_and_bn_UNet.cpp  act_and_bn_VGG16.cpp  add.cpp  bias_load_UNet.cpp  bias_load_VGG16.cpp  cin_load.cpp  cin_load_prev.cpp  concat.cpp  cout_write.cpp  pool_ENet.cpp  pool_UNet.cpp  pool_VGG16.cpp  upsample.cpp  (+1 more)
auto_compile/design_generation/TAPA_1/: FlexCNN.cpp  hw_kernel_modify.py  tmp.cpp
auto_compile/design_generation/TAPA_1 copy/: FlexCNN.cpp  design_prepare.sh
auto_compile/design_generation/TAPA_2/: FlexCNN.cpp  design_prepare.sh
auto_compile/dse/: dse.py  dse_p.py  latency_est copy.py  latency_est.py  network.model  resource_est.py  utils.py
auto_compile/graph_translation/: extract_info.py  mapper.py
auto_compile/inst_gen/: input.json  inst_parse.py
auto_compile/inst_generation/: ENet_inst_gen.py  ENet_inst_gen_16.py  UNet_inst_gen.py  VGG16_inst_gen.py  inst_gen.py  inst_gen_old.py  run.sh
auto_compile/protobuf_translation/: extract_info.py
libsacc/: .gitignore  CMakeLists.txt  README.md  env.sh  integration.md  requirements.txt
libsacc/config/: openpose.insts
libsacc/data/: README.md
libsacc/docker/: Dockerfile  README  run.sh
libsacc/inc/: sacc.hpp  sacc_params.h  sacc_types.h  sacc_utils.hpp  xcl2.hpp
libsacc/src/: CMakeLists.txt  libsacc.cpp  xcl2.cpp
libsacc/test/: CMakeLists.txt  cqt.py  data.in  perf.py  utils.py
tf_DSA/: .gitignore  README.md  env.sh  requirements.txt  run.py  run_stream_batch16.py  test.sh
tf_DSA/tf_pose/: estimator_batch16.py  sacc_utils.py
(+114 files in other folders)
