cmake_minimum_required(VERSION 3.3) 
project(libsacc) 
set(OP_ACC_VERSION_MAJOR 0) 
set(OP_ACC_VERSION_MINOR 0) 
set(OP_ACC_VERSION_PATCH 2)
set(OP_ACC_VERSION ${OP_ACC_VERSION_MAJOR}.${OP_ACC_VERSION_MINOR}.${OP_ACC_VERSION_PATCH})

set(SDX_DIRECTORY $ENV{XILINX_SDX})
set(VIVADO_DIRECTORY $ENV{XILINX_VIVADO})
set(XILINX_XRT $ENV{XILINX_XRT})

set(CMAKE_CXX_COMPILER ${SDX_DIRECTORY}/bin/xcpp)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/lib)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/inc)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)

set(CMAKE_BUILD_TYPE Debug)

add_subdirectory(src)
enable_testing()

add_test(NAME CORRECTNESS
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMAND ${CMAKE_SOURCE_DIR}/venv/bin/python3 test/cqt.py)

add_test(NAME PERFORMANCE
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMAND ${CMAKE_SOURCE_DIR}/venv/bin/python3 test/perf.py)

